--- a/proyecto pagina/css/tabla2024.css
+++ b/proyecto pagina/css/tabla2024.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
     margin: 0;
     padding: 0;
+    background-color:  hsl(118, 79%, 21%);
 }
 
 .container {
@@ -22,7 +22,9 @@ h1 {
     margin-top: auto;
 }
 
-.tabla-equipos th,
+.tabla-equipos th{
+    background-color: #ddd;
+}
 .tabla-equipos td {
     padding: auto;
     text-align: center;
@@ -44,4 +46,22 @@ h1 {
 
 .tabla-equipos td {
     font-size: 1.1em;
+}
+#a1 {
+    text-decoration: none;   
+    background: linear-gradient(to top left, hwb(123 4% 71%), hsl(123, 83%, 56%)) ; 
+    display:flex;
+    width: fit-content;
+    gap: 10px;
+    padding: 8px;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all 500ms;
+}
+
+#a1:hover{
+    opacity: 0.8;
+    scale: 1.1;
 }
