--- a/proyecto pagina/css/tabla2024.css
+++ b/proyecto pagina/css/tabla2024.css
@@ -2,7 +2,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:  hsl(118, 79%, 21%);
+    background-color: hsl(118, 79%, 21%);
+}
+
+tr {
+    background-color: #ddd;
 }
 
 .container {
@@ -22,9 +26,10 @@ h1 {
     margin-top: auto;
 }
 
-.tabla-equipos th{
+.tabla-equipos th {
     background-color: #ddd;
 }
+
 .tabla-equipos td {
     padding: auto;
     text-align: center;
@@ -32,7 +37,7 @@ h1 {
 }
 
 .tabla-equipos th {
-    background-color: #4CAF50;
+    background-color: #ddd;
     color: white;
 }
 
@@ -47,21 +52,22 @@ h1 {
 .tabla-equipos td {
     font-size: 1.1em;
 }
-#a1 {
-    text-decoration: none;   
-    background: linear-gradient(to top left, hwb(123 4% 71%), hsl(123, 83%, 56%)) ; 
-    display:flex;
-    width: fit-content;
-    gap: 10px;
+
+#tabla-de-goleadores {
+    text-decoration: none;
+    background: linear-gradient(to top left, hwb(123 4% 71%), hsl(123, 83%, 56%));
     padding: 8px;
     font-size: 20px;
     color: #ffffff;
     font-weight: bold;
     border-radius: 5px;
     transition: all 500ms;
+    display: block;
+    width: fit-content;
+    margin: 5rem auto;
 }
 
-#a1:hover{
+#a1:hover {
     opacity: 0.8;
     scale: 1.1;
 }
