--- a/proyecto pagina/css/GyA.css
+++ b/proyecto pagina/css/GyA.css
@@ -70,3 +70,87 @@ td {
 div{
     width: 100%;
 }
+#a2 {
+    text-decoration: none;   
+    background: linear-gradient(to top left, hwb(123 4% 71%), hsl(123, 83%, 56%)) ; 
+    display: block;
+    width: fit-content;
+    gap: 10px;
+    padding: 8px;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all 500ms;
+    align-items: center;
+}
+
+#a2:hover{
+    opacity: 0.8;
+    scale: 1.1;
+}
+
+footer {
+    background-color: #1c1c1c;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-logo img {
+    width: 100px;
+}
+
+.footer-nav ul {
+    list-style: none;
+    display: flex;
+}
+
+.footer-nav ul li {
+    margin: 0 15px;
+}
+
+.footer-nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.footer-nav ul li a:hover {
+    text-decoration: underline;
+}
+
+
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 14px;
+}
+
+.footer-bottom p {
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-nav ul {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    .footer-nav ul li {
+        margin-bottom: 10px;
+    }
+}
