--- a/proyecto pagina/css/tabla2024.css
+++ b/proyecto pagina/css/tabla2024.css
@@ -2,11 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: hsl(118, 79%, 21%);
-}
-
-tr {
-    background-color: #ddd;
+    background-color:  hsl(118, 79%, 21%);
 }
 
 .container {
@@ -26,18 +22,21 @@ h1 {
     margin-top: auto;
 }
 
-.tabla-equipos th {
+.tabla-equipos th{
     background-color: #ddd;
 }
-
 .tabla-equipos td {
     padding: auto;
     text-align: center;
     border: 1px solid #ddd;
 }
 
+tr{
+    background-color: #ffffff;
+}
+
 .tabla-equipos th {
-    background-color: #ddd;
+    background-color: #4CAF50;
     color: white;
 }
 
@@ -52,22 +51,87 @@ h1 {
 .tabla-equipos td {
     font-size: 1.1em;
 }
-
-#tabla-de-goleadores {
-    text-decoration: none;
-    background: linear-gradient(to top left, hwb(123 4% 71%), hsl(123, 83%, 56%));
+#a2 {
+    text-decoration: none;   
+    background: linear-gradient(to top left, hwb(123 4% 71%), hsl(123, 83%, 56%)) ; 
+    display: block;
+    width: fit-content;
+    gap: 10px;
     padding: 8px;
     font-size: 20px;
     color: #ffffff;
     font-weight: bold;
     border-radius: 5px;
     transition: all 500ms;
-    display: block;
-    width: fit-content;
-    margin: 5rem auto;
+    align-items: center;
 }
 
-#a1:hover {
+#a2:hover{
     opacity: 0.8;
     scale: 1.1;
+}
+
+footer {
+    background-color: #1c1c1c;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-logo img {
+    width: 100px;
+}
+
+.footer-nav ul {
+    list-style: none;
+    display: flex;
+}
+
+.footer-nav ul li {
+    margin: 0 15px;
+}
+
+.footer-nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.footer-nav ul li a:hover {
+    text-decoration: underline;
+}
+
+
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 14px;
+}
+
+.footer-bottom p {
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-nav ul {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    .footer-nav ul li {
+        margin-bottom: 10px;
+    }
 }
